Fixed box shadow issue on safari mobile.

--- a/css/styles.css
+++ b/css/styles.css
@@ -155,6 +155,7 @@ a:hover {
 .contact-form .contact-form-input {
   display: block;
   width: 100%;
+  -webkit-appearance: none;
   border: 0;
   border-radius: 4px;
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15), 0px 4px 4px rgba(0, 0, 0, 0.1);
